--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Кликер</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Сосисочный кликер</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Подключаем стили -->
+
     <style>
         body {
             font-family: Arial, sans-serif;
