--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css"> <!-- Подключаем стили -->
 
     <style>
+    body { background: red !important; }
+</style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
