--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
     </style>
 </head>
 <body>
-
+    <div class="container">
+        <h1>Сосисочный кликер</h1>
+        <p id="score">Счёт: 0</p>
+        <img id="sausage" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/Sausage.png/320px-Sausage.png" alt="Сосиска" onclick="clickSausage()">
+    </div>
+</body>
     <h1>Сосисочный кликер</h1>
     <p id="score">Счёт: 0</p>
     
