--- a/index.html
+++ b/index.html
@@ -3,25 +3,83 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Сосисочный кликер</title>
-  <!-- Подключаем внешний файл стилей -->
-  <link rel="stylesheet" href="styles.css">
-  <!-- Если хочешь временно добавить инлайн-стили для теста, можно так: -->
-  <!-- <style>
-    body { background: red !important; }
-  </style> -->
+  <title>Шишка</title>
+  <!-- Можно оставить подключение внешнего файла, если понадобится -->
+  <!-- <link rel="stylesheet" href="styles.css"> -->
+  <style>
+    /* Задаём фон с лесом и голубым оверлеем */
+    body {
+      margin: 0;
+      padding: 0;
+      background-image: url('https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      font-family: Arial, sans-serif;
+      color: #fff;
+    }
+    /* Голубой оверлей для создания холодной атмосферы */
+    body::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 100, 200, 0.5);
+      z-index: 0;
+    }
+    /* Контейнер с контентом */
+    .container {
+      position: relative;
+      z-index: 1;
+      background: rgba(255, 255, 255, 0.8);
+      border-radius: 10px;
+      padding: 20px;
+      text-align: center;
+      max-width: 400px;
+    }
+    /* Заголовок */
+    h1 {
+      margin-bottom: 20px;
+      font-size: 32px;
+      color: #0077cc;
+    }
+    /* Счётчик */
+    #score {
+      font-size: 24px;
+      margin-bottom: 20px;
+      color: #005599;
+    }
+    /* Изображение шишки */
+    #pinecone {
+      width: 150px;
+      cursor: pointer;
+      transition: transform 0.1s, filter 0.3s;
+    }
+    #pinecone:hover {
+      filter: brightness(1.1);
+    }
+    #pinecone:active {
+      transform: scale(0.9);
+    }
+  </style>
 </head>
 <body>
   <div class="container">
-    <h1>Сосисочный кликер</h1>
+    <h1>Шишка</h1>
     <p id="score">Счёт: 0</p>
-    <img id="sausage" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/Sausage.png/320px-Sausage.png" alt="Сосиска" onclick="clickSausage()">
+    <img id="pinecone" src="https://upload.wikimedia.org/wikipedia/commons/4/48/Pine_cone.jpg" alt="Пиховая шишка" onclick="clickPinecone()">
   </div>
-
+  
   <script>
     let score = 0;
-
-    function clickSausage() {
+    function clickPinecone() {
       score++;
       document.getElementById("score").innerText = "Счёт: " + score;
     }
