--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-image: url('https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+      background-image: url('<img id="pinecone" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8a/Pine_cone_%28PSF%29.jpg/320px-Pine_cone_%28PSF%29.jpg" alt="Пиховая шишка" onclick="clickPinecone()">');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
