--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-image: url('<img id="pinecone" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8a/Pine_cone_%28PSF%29.jpg/320px-Pine_cone_%28PSF%29.jpg" alt="Пиховая шишка" onclick="clickPinecone()">');
+      background-image: url('<img id="pinecone" src="https://cdn.pixabay.com/photo/2014/04/03/10/32/pine-cone-312202_960_720.png" alt="Пиховая шишка" onclick="clickPinecone()">');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -74,7 +74,7 @@
   <div class="container">
     <h1>Шишка</h1>
     <p id="score">Счёт: 0</p>
-    <img id="pinecone" src="https://upload.wikimedia.org/wikipedia/commons/4/48/Pine_cone.jpg" alt="Пиховая шишка" onclick="clickPinecone()">
+    <img id="pinecone" src="pinecone.jpg" alt="Пиховая шишка" onclick="clickPinecone()">
   </div>
   
   <script>
