--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
       margin: 0;
       padding: 0;
       font-family: 'Cinzel', serif;
-      background: url('https://images.unsplash.com/photo-1614066087803-6fa8f2431c9f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80') no-repeat center center fixed;
+      background: url('https://source.unsplash.com/1920x1080/?forest') no-repeat center center fixed;
       background-size: cover;
+      background-color: #004400;
       color: #ffffff;
     }
     body::before {
@@ -22,14 +23,14 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 150, 200, 0.4);
+      background: rgba(0, 150, 200, 0.3);
       z-index: -1;
     }
     .container {
       text-align: center;
       padding: 20px;
       margin: 50px auto;
-      background: rgba(255, 255, 255, 0.8);
+      background: rgba(255, 255, 255, 0.85);
       border-radius: 15px;
       box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
       max-width: 400px;
@@ -63,26 +64,29 @@
   <div class="container">
     <h1>Шишка</h1>
     <p id="score">Счёт: 0</p>
-    <img id="pinecone" src="https://cdn.pixabay.com/photo/2014/04/03/10/32/pine-cone-312202_960_720.png" alt="Пиховая шишка" onclick="clickPinecone()">
+    <img id="pinecone" src="https://upload.wikimedia.org/wikipedia/commons/2/2b/Pine_cone.png" alt="Пиховая шишка" onclick="clickPinecone()">
   </div>
 
   <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      let score = parseInt(localStorage.getItem("score")) || 0;
-      const scoreElement = document.getElementById("score");
+    // Загружаем сохранённый счёт при загрузке страницы
+    let score = parseInt(localStorage.getItem("score")) || 0;
+    const scoreElement = document.getElementById("score");
 
-      function updateScore() {
-        scoreElement.innerText = "Счёт: " + score;
-        localStorage.setItem("score", score);
-      }
+    function updateScore() {
+      scoreElement.innerText = "Счёт: " + score;
+      localStorage.setItem("score", score);
+    }
 
+    // Обновляем счёт при старте
+    updateScore();
+
+    function clickPinecone() {
+      score++;
       updateScore();
+    }
 
-      window.clickPinecone = function () {
-        score++;
-        updateScore();
-      };
-    });
+    // Гарантия, что данные загружаются правильно при переходе по ссылке
+    window.addEventListener("load", updateScore);
   </script>
 </body>
 </html>
