--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Шишка - Кликер</title>
-  <!-- Подключаем красивый шрифт из Google Fonts -->
+  <!-- Подключаем красивый шрифт -->
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       padding: 0;
       font-family: 'Cinzel', serif;
-      background: url('https://source.unsplash.com/1920x1080/?forest') no-repeat center center fixed;
+      background: url('https://images.pexels.com/photos/4827/nature-forest-trees-fog.jpeg') no-repeat center center fixed;
       background-size: cover;
-      background-color: #004400;
       color: #ffffff;
+      position: relative;
     }
+    /* Затемнение для лучшей читаемости */
     body::before {
       content: "";
       position: fixed;
@@ -23,7 +24,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 150, 200, 0.3);
+      background: rgba(0, 50, 50, 0.5); /* Полупрозрачный тёмно-зелёный слой */
       z-index: -1;
     }
     .container {
@@ -68,7 +69,6 @@
   </div>
 
   <script>
-    // Загружаем сохранённый счёт при загрузке страницы
     let score = parseInt(localStorage.getItem("score")) || 0;
     const scoreElement = document.getElementById("score");
 
@@ -77,7 +77,6 @@
       localStorage.setItem("score", score);
     }
 
-    // Обновляем счёт при старте
     updateScore();
 
     function clickPinecone() {
@@ -85,7 +84,6 @@
       updateScore();
     }
 
-    // Гарантия, что данные загружаются правильно при переходе по ссылке
     window.addEventListener("load", updateScore);
   </script>
 </body>
