--- a/index.html
+++ b/index.html
@@ -4,19 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Шишка - Кликер</title>
-  <!-- Подключаем красивый шрифт -->
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       padding: 0;
       font-family: 'Cinzel', serif;
-      background: url('https://images.pexels.com/photos/4827/nature-forest-trees-fog.jpeg') no-repeat center center fixed;
+      background: url('https://www.publicdomainpictures.net/pictures/280000/velka/forest-landscape.jpg') no-repeat center center fixed;
       background-size: cover;
+      background-color: #004400;
       color: #ffffff;
-      position: relative;
     }
-    /* Затемнение для лучшей читаемости */
     body::before {
       content: "";
       position: fixed;
@@ -24,7 +22,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 50, 50, 0.5); /* Полупрозрачный тёмно-зелёный слой */
+      background: rgba(0, 50, 50, 0.4);
       z-index: -1;
     }
     .container {
