--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Cinzel', serif;
-      background: url('https://www.publicdomainpictures.net/pictures/280000/velka/forest-landscape.jpg') no-repeat center center fixed;
+      background: url('https://img.freepik.com/free-photo/mysterious-winter-landscape-majestic-mountains-winter-magical-winter-snow-covered-tree_146671-13874.jpg?t=st=1741743816~exp=1741747416~hmac=5ef044abb202f2fc726c12250b875574eff28ad5e66a1d3773dae20a8a98bcda&w=1380') no-repeat center center fixed;
       background-size: cover;
       background-color: #004400;
       color: #ffffff;
