--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <div class="container">
     <h1>Шишка</h1>
     <p id="score">Счёт: 0</p>
-    <img id="pinecone" src="https://upload.wikimedia.org/wikipedia/commons/2/2b/Pine_cone.png" alt="Пиховая шишка" onclick="clickPinecone()">
+    <img id="pinecone" src="https://lukoshko70.ru/images/detailed/3/20058_0.jpg" alt="Пиховая шишка" onclick="clickPinecone()">
   </div>
 
   <script>
