--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Cinzel', serif;
-      background: url('https://weboboi.ru/files/contents/137/137.jpg') no-repeat center center fixed;
+      background: url('https://img.freepik.com/free-photo/mysterious-winter-landscape-majestic-mountains-winter-magical-winter-snow-covered-tree_146671-13874.jpg') no-repeat center center fixed;
       background-size: cover;
       background-color: #004400;
       color: #ffffff;
