--- a/index.html
+++ b/index.html
@@ -89,3 +89,10 @@
   </script>
 </body>
 </html>
+/* Делаем сайт статичным */
+html, body {
+    width: 100%;
+    height: 100%;
+    overflow: hidden; /* Убираем прокрутку */
+    touch-action: none; /* Блокируем жесты зума */
+}
