--- a/index.html
+++ b/index.html
@@ -2,65 +2,10 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>Шишка - Кликер</title>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Cinzel', serif;
-      background: url('https://img.freepik.com/free-photo/mysterious-winter-landscape-majestic-mountains-winter-magical-winter-snow-covered-tree_146671-13874.jpg') no-repeat center center fixed;
-      background-size: cover;
-      background-color: #004400;
-      color: #ffffff;
-    }
-    /* Затемнение фона для лучшей читаемости */
-    body::before {
-      content: "";
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 50, 50, 0.3);
-      z-index: -1;
-    }
-    .container {
-      text-align: center;
-      padding: 20px;
-      margin: 50px auto;
-      background: rgba(255, 255, 255, 0.85);
-      border-radius: 15px;
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-      max-width: 400px;
-    }
-    h1 {
-      font-size: 48px;
-      margin-bottom: 20px;
-      color: #003366;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-    }
-    #score {
-      font-size: 32px;
-      margin-bottom: 20px;
-      color: #002244;
-      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
-    }
-    #pinecone {
-      width: 200px;
-      cursor: pointer;
-      transition: transform 0.1s, filter 0.3s;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-    }
-    #pinecone:hover {
-      filter: brightness(1.1);
-    }
-    #pinecone:active {
-      transform: scale(0.9);
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css"> <!-- Подключаем стили -->
 </head>
 <body>
   <div class="container">
@@ -89,10 +34,3 @@
   </script>
 </body>
 </html>
-/* Делаем сайт статичным */
-html, body {
-    width: 100%;
-    height: 100%;
-    overflow: hidden; /* Убираем прокрутку */
-    touch-action: none; /* Блокируем жесты зума */
-}
